--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
+    "cypress": "cypress",
     "test": "jest",
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
@@ -21,6 +22,7 @@
     "@vue/test-utils": "^2.4.6",
     "@vue/vue3-jest": "^27.0.0-alpha.1",
     "babel-jest": "^27.5.1",
+    "cypress": "^13.13.1",
     "jest": "^27.5.1",
     "vue3-jest": "^27.0.0-alpha.1"
   },
